add fem et arch

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                 <div class='column two-thirds'>
                     <h2>For programmer</h2>
                     <p>
-                        Almost all of FreeCAD\'s functionality is accessible to <a href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>.
-                        You can easily extend FreeCAD\'s functionality, automatize it with scripts, build your own modules or even embed FreeCAD in your own application.
+                        Almost all of FreeCAD's functionality is accessible to <a href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>.
+                        You can easily extend FreeCAD's functionality, automatize it with scripts, build your own modules or even embed FreeCAD in your own application.
                     </p>
                 </div>
                 <div class='column third'>
@@ -214,7 +214,7 @@
     </section>
 
 
-    <section id='cap-graphics' class='cap'>
+    <section id='cap-fem' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column third'>
@@ -223,8 +223,8 @@
                 <div class='column two-thirds'>
                     <h2>FEM Design</h2>
                     <p>
-                        GIMP is a high quality application for producing icons,
-                        graphical design elements, and art for user interface components and mockups.
+                        <a href="http://www.freecadweb.org/wiki/index.php?title=Fem_Module" title="Fem workbench">The Fem Workbench</a> provides modern Finite Element Analysis (FEA) workflow for FreeCAD. 
+                        Mainly this means all tools to make an Finite Element Analysis are combined in one GUI.
                     </p>
                 </div>
             </div>
@@ -232,15 +232,15 @@
     </section>
 
 
-    <section id='cap-algorithms' class='cap'>
+    <section id='cap-architecture' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
 
                 <div class='column two-thirds'>
                     <h2>Architectural Design</h2>
                     <p>
-                        GIMP is a high quality framework for scripted image manipulation, 
-                        with multi-language support such as C, C++, Perl, Python, Scheme, and more!
+                        <a href="http://www.freecadweb.org/wiki/index.php?title=Arch_Module" title="Arch workbench">The Arch workbench</a> provides modern BIM workflow to FreeCAD, with support for features like IFC support, fully parametric architectural entities such as walls, structural elements or windows, and rich 2D document production. 
+                        The Arch workbench also feature all the tools from the <a href="http://www.freecadweb.org/wiki/index.php?title=Draft_Module" title="Draft Workbench">Draft Workbench</a>. 
                     </p>
                 </div>
 
@@ -259,15 +259,14 @@
             <div class='row clearfix'>
 
                 <div class='column full'>
-                    <h3>Key Component in a Desktop Publishing Workflow</h3>
+                    <h3>FreeCAD and third party</h3>
                     <p>
-                        GIMP provides top-notch color management features to 
-			ensure high-fidelity color reproduction across digital 
-			and printed media. It is best used in workflows 
-			involving other free software such as 
-                        <a href="http://www.scribus.net/" title="Scribus">Scribus</a>, 
+                        FreeCAD make a huge use of existing library or software. 
+                        You will want to install Graphviz, Teigha File Converter, IfcOpenShell to enhance the FreeCAD functionnalities.
+                        FreeCAD is best used in workflows involving other free software such as 
                         <a href="https://inkscape.org" title="Inkscape">Inkscape</a>,
-                        and <a href="http://www.selapa.net/swatchbooker/" title="SwatchBooker">SwatchBooker</a>.
+                        <a href="http://librecad.org" title="LibreCAD">LibreCAD</a>, 
+                        and <a href="https://www.blender.org" title="Blender">Blender</a>.
                     </p>
                 </div>
 
@@ -357,7 +356,7 @@
                     </div>
                     <div class="column third">
                         <ul class="nav-bottom">
-                            <li id="nav-btm-about"><a href="http://freecadweb.org/wiki/?title=About_FreeCAD"><i class="fa fa-info-circle fa-fw"></i> About GIMP</a></li>
+                            <li id="nav-btm-about"><a href="http://freecadweb.org/wiki/?title=About_FreeCAD"><i class="fa fa-info-circle fa-fw"></i> About FreeCAD</a></li>
                             <li id="nav-btm-docs"><a href="/docs/"><i class="fa fa-book fa-fw"></i> Documentation</a></li>
                             <li id="nav-btm-donating"><a href="/donating/"><i class="fa fa-money fa-fw"></i> Donate</a></li>
                         </ul>
@@ -365,7 +364,8 @@
                     <div class="column third">
                         <ul class="nav-bottom">
                             <li id="nav-btm-develop"><a href="http://freecadweb.org/wiki/?title=Help_FreeCAD"><i class="fa fa-code fa-fw"></i> Get Involved</a></li>
-                            <li id="nav-btm-tutorials"><a href="/tutorials/"><i class="fa fa-graduation-cap fa-fw"></i> Tutorials</a></li>
+                            <li id="nav-btm-tutorials"><a href="http://freecadweb.org/wiki/?title=Tutorials"><i class="fa fa-graduation-cap fa-fw"></i> Tutorials</a></li>
+                            <li id="nav-btm-tutorials"><a href="https://crowdin.com/project/freecad"><i class="fa fa-language fa-fw"></i>Translate</a></li>
 
 
                         </ul>
@@ -377,22 +377,30 @@
                         <ul>
                             <li><a href='http://freecadweb.org/wiki/?title=Feature_list'>Features</a></li>
                             <li><a href='http://www.freecadweb.org/wiki/index.php?title=Release_notes_0.16'>Release Notes</a></li>
+                            <li><a href='http://freecadweb.org/wiki/?title=Getting_started'>Getting started</a></li>
                             <li><a href='http://freecadweb.org/wiki/index.php?title=Main_Page'>Wiki</a></li>
+                            <li><a href='http://www.freecadweb.org/wiki/index.php?title=FAQ'>FAQ</a></li>
                         </ul>
                     </div>
 
                     <div class='column third'>
                         <ul>
-                            <li><a href='/docs/userfaq.html'>FAQ</a></li>
-                            <li><a href='/books/'>Books</a></li>
+                            <li><a href='irc://irc.freenode.net/freecad'>IRC</a></li>
+                            <li><a href='xmpp://freecad@jmuc.jappix.com'>XMPP</a></li>
+                            <li><a href='https://www.youtube.com/results?search_query=freecad'>Youtube videos</a></li>
+                            <li><a href='https://www.facebook.com/FreeCAD'>Facebook</a></li>
+                            <li><a href='https://plus.google.com/u/0/communities/103183769032333474646'>Google+</a></li>
+                            <li><a href='http://area51.stackexchange.com/proposals/88434/freecad'>Stackexchange</a></li>
                         </ul>
                     </div>
 
                     <div class='column third'>
                         <ul>
-                            <li><a href='/bugs/'>Bug Reports</a></li>
-                            <li><a href='/mail_lists.html'>Mailing Lists</a></li>
-                            <li><a href='/irc.html'>IRC</a></li>
+                            <li><a href='https://github.com/FreeCAD/FreeCAD'>Github</a></li>
+                            <li><a href='http://www.freecadweb.org/tracker/'>Bug Reports</a></li>
+                            <li><a href='http://freecadweb.org/wiki/?title=Compiling'>Building from source</a></li>
+                            <li><a href='http://freecadweb.org/api/'>C++ &amp; Python API</a></li>
+                            <li><a href='http://freecadweb.org/wiki/?title=Licence'>Licence informations</a></li>
                         </ul>
                     </div>
 
