--- a/index.html
+++ b/index.html
@@ -317,9 +317,6 @@
                 </div>
             </div>
         </div>
-        <div class='container'>
-            <img id='blocks' src='theme/images/blocks.svg' alt='Building Blocks Graphic' />
-        </div>
     </section>
 
     <section id="attribution">
@@ -328,10 +325,13 @@
                     <div class="column full">
                         
                         <p>
-                            Photos by <a href="https://pixls.us">Pat David</a> (<a href="http://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike"><span class='cc'>cba</span></a>)
+                            Photos by <a href="https://pixls.us">?</a> (<a href="http://creativecommons.org/licenses/by-sa/4.0/" title="Creative Commons Attribution-ShareAlike"><span class='cc'>cba</span></a>)
                         </p>
                         <p>
-                            <em>Original Artwork Creation</em> background image by <a href="http://www.davidrevoy.com/">David Revoy</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution"><span class='cc'>cb</span></a>)
+                            <em>Original Artwork Creation</em> background image by (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution"><span class='cc'>cb</span></a>)
+                        </p>
+                        <p>
+                            <em>Original Website Design</em> by The Gimp.org (<a href="http://gimp.org/" title="Gimp.org"></a>)
                         </p>
                 </div>
             </div>
